--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  “engines”: {
-    “node”: “>=14 <15”,
+  "engines": {
+    "node": ">=14 <15",
   },
   "author": "",
   "license": "ISC",
